--- a/Project.toml
+++ b/Project.toml
@@ -1,2 +1,7 @@
+name = "MSc_LMM_EEG"
+authors = ["Luis Lips", "Judith Schepers", "Benedikt Ehinger"]
+[compat]
+julia = "1.7.2"
+DrWatson = "2.9.1"
 [deps]
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
