--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ data
 videos
 plots
 _research
+notebooks
+_old
 
 ################################################################################
 #                                    Julia                                     #
@@ -38,6 +40,11 @@ docs/site/
 
 .ipynb_checkpoints
 */.ipynb_checkpoints/*
+
+################################################################################
+#                               VS Code                               #
+################################################################################
+*.code-workspace
 
 ################################################################################
 #                               Microsoft Office                               #
